--- a/Portfolio_x1/assets/css/src/buttons.css
+++ b/Portfolio_x1/assets/css/src/buttons.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     font-size: 3rem;
-    border: 1px double white;
+    border: 1.5px inset white;
     border-radius: 100%;
     cursor: pointer;
     user-select: none;
@@ -24,11 +24,6 @@
 }
 .btn_menu .menu_close {
     display: none;
-    transition: .1s ease-in-out;
-    -webkit-transition: .1s ease-in-out;
-    -moz-transition: .1s ease-in-out;
-    -ms-transition: .1s ease-in-out;
-    -o-transition: .1s ease-in-out;
 }
 
 /* --------------------------------Menu Button-- */
