--- a/Portfolio_x1/assets/css/src/header.css
+++ b/Portfolio_x1/assets/css/src/header.css
@@ -1,33 +1,24 @@
 .main_header {
-    width: 100%;
-    height: 60rem;
-    background-image: url(../../imgs/hero.png);
-    background-size: 100%;
-    background-position: center;
-    clip-path: polygon(0 0, 100% 0, 100% 50rem, 0 100%);
     position: relative;
     overflow: hidden;
-    width: 100%;
-    animation: animateBg 5s ease-in-out infinite;
-    -webkit-animation: animateBg 5s ease-in-out infinite;
+    overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;    
+    width: 100%; height: 60rem;
+    z-index: 1;
+}
+.main_header iframe::-webkit-scrollbar {
+    display: none;
+    width: 0px;
+    background: transparent;
 }
 
-@keyframes animateBg {
-    0%{
-        
-        background-color: black;
+.main_header iframe {
+    width: 100%; height: 100%;
+    position: absolute;
+    z-index: -10000;
 }
-    25%{
-        background-color: rgb(1, 4, 58);
-    }
-    50%{
-        background-color: rgb(75, 0, 65);
-        
-    }
-    75%{
-        background-color: rgb(74, 1, 1);
-    }
-    100%{
-        background-color: rgb(0, 0, 0);    
-}
+
+.main_header .top_navbar {
+    width: 70%; height: 6rem;
+    margin: 0 auto;
 }
