--- a/Portfolio_x1/assets/css/main.css
+++ b/Portfolio_x1/assets/css/main.css
@@ -1,4 +1,4 @@
-@import "src/base.css";
-@import "src/header.css";
-@import "src/buttons.css";
-@import "src/logo.css";
+@import url(src/base.css);
+@import url(src/header.css);
+@import url(src/buttons.css);
+@import url(src/logo.css);
