--- a/Portfolio_x1/assets/css/src/logo.css
+++ b/Portfolio_x1/assets/css/src/logo.css
@@ -3,6 +3,10 @@
   position: absolute;
   top: 10rem;
   left: 1rem;
+  border-radius: 100%;
+  -ms-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
 }
 
 .logo img {
