--- a/Portfolio_x1/assets/sass/src/buttons.scss
+++ b/Portfolio_x1/assets/sass/src/buttons.scss
@@ -1,3 +1,6 @@
+@import "../helpers/variables";
+@import "../helpers/mixins";
+
 /* --------------------------------Menu Button-- */
 .btn_menu {
     min-width: 5rem;
