--- a/Portfolio_x1/assets/sass/src/logo.scss
+++ b/Portfolio_x1/assets/sass/src/logo.scss
@@ -1,10 +1,15 @@
+@import "../helpers/variables";
+@import "../helpers/mixins";
+
 .logo {
     width: 12rem;
     position: absolute;
     top: 10rem;
     left: 1rem;
+    @include round (100%);
+    img {
+        max-width: 100%;
+        
+    }
 }
 
-.logo img {
-    max-width: 100%;
-}
