--- a/Portfolio_x1/assets/css/main.css
+++ b/Portfolio_x1/assets/css/main.css
@@ -2,3 +2,6 @@
 @import url(src/header.css);
 @import url(src/buttons.css);
 @import url(src/logo.css);
+@import url(src/top_navbar.css);
+
+/*# sourceMappingURL=../css/main.map */
