--- a/Portfolio_x1/assets/css/src/buttons.css
+++ b/Portfolio_x1/assets/css/src/buttons.css
@@ -1,26 +1,84 @@
 /* --------------------------------Menu Button-- */
+/* line 5, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/buttons.scss */
 .btn_menu {
-  min-width: 5rem;
-  min-height: 5rem;
-  padding: 0;
-  margin: 0;
-  line-height: 0;
+  width: 3.5rem;
+  height: 3rem;
   display: flex;
-  justify-content: center;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
   align-items: center;
-  font-size: 3rem;
-  border: 1.5px inset var(--darkPink);
-  border-radius: 100%;
+  position: relative;
   cursor: pointer;
-  user-select: none;
   position: absolute;
-  top: 4%;
   right: 3%;
-  z-index: 1000;
+  top: 3%;
 }
 
-.btn_menu .menu_close {
-  display: none;
+/* line 14, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/buttons.scss */
+.btn_menu .bars {
+  width: 95%;
+  height: calc(100%/8);
+  transition: 50ms ease-in-out;
+}
+
+/* line 19, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/buttons.scss */
+.btn_menu .barss {
+  width: 95%;
+  height: calc(100%/8);
+  transition: 50ms ease-in-out;
+}
+
+/* line 25, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/buttons.scss */
+.btn_menu .bars:nth-child(1) {
+  background-color: white;
+}
+
+/* line 28, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/buttons.scss */
+.btn_menu .bars:nth-child(2) {
+  background-color: #cecece;
+}
+
+/* line 31, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/buttons.scss */
+.btn_menu .bars:nth-child(3) {
+  background-color: #cecece;
+}
+
+/* line 34, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/buttons.scss */
+.btn_menu .bars:nth-child(4) {
+  background-color: white;
+}
+
+/* line 38, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/buttons.scss */
+.btn_menu .barss:nth-child(1) {
+  background-color: white;
+  transform: rotateZ(40deg);
+  position: absolute;
+  top: 50%;
+}
+
+/* line 45, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/buttons.scss */
+.btn_menu .barss:nth-child(2) {
+  background-color: #cecece;
+  transform: rotateZ(40deg);
+  position: absolute;
+}
+
+/* line 51, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/buttons.scss */
+.btn_menu .barss:nth-child(3) {
+  background-color: #cecece;
+  transform: rotateZ(-40deg);
+  position: absolute;
+}
+
+/* line 57, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/buttons.scss */
+.btn_menu .barss:nth-child(4) {
+  background-color: white;
+  transform: rotateZ(-40deg);
+  position: absolute;
+  top: 50%;
+  z-index: -1;
 }
 
 /* --------------------------------Menu Button-- */
+
+/*# sourceMappingURL=../../css/src/buttons.map */
