--- a/Portfolio_x1/assets/css/src/logo.css
+++ b/Portfolio_x1/assets/css/src/logo.css
@@ -1,10 +1,14 @@
+/* line 4, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/logo.scss */
 .logo {
   width: 12rem;
   position: absolute;
-  top: 10rem;
+  top: 1rem;
   left: 1rem;
 }
 
+/* line 10, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/logo.scss */
 .logo img {
   max-width: 100%;
 }
+
+/*# sourceMappingURL=../../css/src/logo.map */
