--- a/Portfolio_x1/assets/sass/src/base.scss
+++ b/Portfolio_x1/assets/sass/src/base.scss
@@ -1,25 +1,12 @@
 @import "../helpers/variables";
 @import "../helpers/mixins";
 
-:root {
-    --mainBg: #0B172A;
-    --mainBgDark: #0e1a29;
-    --mainBgLight: #0e1a29;
-    --mainBgHover: #243d5a;
-
-    --mainTxt: #adb7c3;
-    --mainTxtDark: #fff;
-    --mainTxtlight: #fff;
-    --mainTxtHover: #e2f65e;
-
-    --darkPink: #cb2b44;
-}
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: .5px solid grey; */
+    // border: .5px solid grey;
 }
 
 html {
