--- a/Portfolio_x1/assets/css/src/base.css
+++ b/Portfolio_x1/assets/css/src/base.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: .5px solid grey;
 }
 
 /* line 12, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/base.scss */
