--- a/Portfolio_x1/assets/sass/helpers/_variables.scss
+++ b/Portfolio_x1/assets/sass/helpers/_variables.scss
@@ -13,5 +13,9 @@ $mainTextHover: #e2f65e;
 $darkPink: #cb2b44;
 
 
+$social-icons-primary: #adb7c3;
+$social-icons-secondary: rgba(0, 0, 0, 0.37);
+
+
 
 $topNavbarBg: rgba(0, 0, 0, 0.37);
