--- a/Portfolio_x1/assets/sass/main.scss
+++ b/Portfolio_x1/assets/sass/main.scss
@@ -2,10 +2,14 @@
 @import "helpers/mixins";
 
 
-
+@import "src/fonts/fa/css/all.min.css";
 @import "src/base.css";
 @import "src/header.css";
+@import "src/top_navbar.css";
+@import "src/hero.css";
 @import "src/buttons.css";
 @import "src/logo.css";
-@import "src/top_navbar.css";
+@import "src/social_icons.css";
+@import "src/sub-header_3d.css";
+
 
