--- a/Portfolio_x1/assets/css/src/header.css
+++ b/Portfolio_x1/assets/css/src/header.css
@@ -1,35 +1,55 @@
 /* line 4, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/header.scss */
 .main_header {
   position: relative;
-  overflow: hidden;
-  overflow: -moz-scrollbars-none;
-  -ms-overflow-style: none;
-  width: 100%;
-  height: 69rem;
-  z-index: 1;
+  z-index: 1000;
+  -webkit-box-shadow: 0px 5px 10px 1px #000;
+  -moz-box-shadow: 0px 5px 10px 1px #000;
+  box-shadow: 0px 5px 10px 1px #000;
 }
 
-/* line 12, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/header.scss */
-.main_header iframe::-webkit-scrollbar {
-  display: none;
-  width: 0px;
-  background: transparent;
-}
-
-/* line 18, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/header.scss */
-.main_header iframe {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -10000;
-  border-bottom: 1px ridge #424242;
-}
-
-/* line 25, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/header.scss */
+/* line 9, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/header.scss */
 .main_header .top_navbar {
-  width: 70%;
-  height: 6rem;
-  margin: 0 auto;
+  width: 100%;
+  height: 7rem;
+  background-color: rgba(0, 0, 0, 0.37);
+  color: #adb7c3;
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+/* line 14, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/header.scss */
+.main_header .top_navbar .links_wrapper {
+  width: 35rem;
+  height: 60%;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 3rem;
+}
+
+/* line 19, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/header.scss */
+.main_header .top_navbar .links_wrapper .link {
+  text-decoration: none;
+  color: #adb7c3;
+  text-transform: uppercase;
+  font-size: 1.7rem;
+  letter-spacing: .1px;
+  cursor: pointer;
+  user-select: none;
+  padding: 1rem;
+}
+
+/* line 29, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/header.scss */
+.main_header .top_navbar .links_wrapper .link:hover {
+  color: #e2f65e;
+}
+
+/* line 31, G:/0.First/myProjects/Portfolio/Portfolio_x1/assets/sass/src/header.scss */
+.main_header .top_navbar .links_wrapper .link:first-child {
+  color: #e2f65e;
 }
 
 /*# sourceMappingURL=../../css/src/header.map */
