--- a/Portfolio_x1/assets/sass/src/header.scss
+++ b/Portfolio_x1/assets/sass/src/header.scss
@@ -3,26 +3,37 @@
 
 .main_header {
     position: relative;
-    overflow: hidden;
-    overflow: -moz-scrollbars-none;
-    -ms-overflow-style: none;    
-    width: 100%; height: 69rem;
-    z-index: 1;
-}
-.main_header iframe::-webkit-scrollbar {
-    display: none;
-    width: 0px;
-    background: transparent;
+    z-index: 1000;
+    @include box-shadow (0px 5px 10px 1px #000);
+
+    .top_navbar {
+        @include size (100%, 7rem);
+        @include color ($topNavbarBg, $mainText);
+        @include flex(row, flex-start, center);
+        
+        .links_wrapper {
+            @include size (35rem, 60%);
+            @include flex(row, space-between, center);
+            margin-left: 3rem;
+    
+            .link {
+                text-decoration: none;
+                color: $mainText;            
+                text-transform: uppercase;
+                font-size: 1.7rem;
+                letter-spacing: .1px;
+                cursor: pointer;
+                user-select: none;
+                padding: 1rem;
+                
+                &:hover {color: $mainTextHover}
+                
+                &:first-child{
+                    color: $mainTextHover;
+                }
+            }
+        }
+    }
 }
 
-.main_header iframe {
-    width: 100%; height: 100%;
-    position: absolute;
-    z-index: -10000;
-    border-bottom: 1px ridge #424242;
-}
 
-.main_header .top_navbar {
-    width: 70%; height: 6rem;
-    margin: 0 auto;
-}
